--- a/UELearnProject/UELearnProject.uproject
+++ b/UELearnProject/UELearnProject.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "UELearnProject",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"UMG"
+			]
 		}
 	],
 	"Plugins": [
