--- a/UELearnProject/Config/GameConfig.json
+++ b/UELearnProject/Config/GameConfig.json
@@ -1,3 +1,7 @@
 {
-
+  "RemainingGameTime": 60.0,
+  "RemainingSpecialCube": 15,
+  "HitScore": 1,
+  "ScaledSize": 1.5,
+  "CubeSpawnRange": [0.0, 500.0, 500.0]
 }
